test_regress/t/t_tagged_case_member_notfound_bad.out
%Error: t/t_tagged_case_member_notfound_bad.v:22:7: Tagged union member 'BadMember' not found in 'union tagged{}t.VInt'
                                                  : ... note: In instance 't'
   22 |       tagged BadMember .x: $display("x = %d", x);
      |       ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
